--- a/public/view/partials/studentDashboard.html
+++ b/public/view/partials/studentDashboard.html
@@ -9,14 +9,15 @@
     </div>
   </div>
   <div class="row">
-    <button class="btn"ng-click="sc.goToParent()">Check-in View</button>
-    <button tooltipped class="btn" onclick="document.getElementById('addStudent').style.display = 'block'"
-    data-position="top" data-delay="50" data-tooltip="Add Student to this Class">
-    <i class="small material-icons">person_add</i>
-    </button>
-    <button class='btn' ng-click='sc.checkoutAllStudents(sc.studentsArray)' type="button" name="button">Check-out no PIN</button>
-    <button class='btn' ng-click='sc.forceCheckout(sc.studentsArray)' type="button" name="button">Check-out All Students</button>
-
+    <div class="col s12 center-align">
+      <button class="btn"ng-click="sc.goToParent()">Check-in View</button>
+      <button tooltipped class="btn" onclick="document.getElementById('addStudent').style.display = 'block'"
+      data-position="top" data-delay="50" data-tooltip="Add Student to this Class">
+      <i class="small material-icons">person_add</i>
+      </button>
+      <button class='btn' ng-click='sc.checkoutAllStudents(sc.studentsArray)' type="button" name="button">Check-out no PIN</button>
+      <button class='btn' ng-click='sc.forceCheckout(sc.studentsArray)' type="button" name="button">Check-out All Students</button>
+    </div>
   <div class="col s12">
     <table>
       <tr>
@@ -34,7 +35,10 @@
         </td>
         <td>{{ x.firstName }} {{ x.lastName }}</td>
         <td>{{ x.grade }}</td>
-        <td><button ng-click="sc.viewEmergency(x.studentID)" onclick="document.getElementById('showEmergency').style.display = 'block'" class="btn">View Emergency Contact</button></td>
+        <td>
+          <button ng-click="sc.viewEmergency(x.studentID)" onclick="document.getElementById('showEmergency').style.display = 'block'" class="btn">
+            <i class="small material-icons">visibility</i>
+          </button></td>
 
         <td><button ng-click="sc.setId(x)" class="btn" onclick="document.getElementById('editStudent').style.display = 'block'">
           <i class="small material-icons">create</i>
